fixed navbar-menu scrollbar
- added navAnimOpen keyframes for opening on navbar-menu
- added glassmorphism effect to nav itself

--- a/css/style.css
+++ b/css/style.css
@@ -57,16 +57,22 @@ body {
         box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
         backdrop-filter: blur( 2px );
         -webkit-backdrop-filter: blur( 2px );
+        animation: navAnimOpen .3s ease-in-out;
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
+      }
+    .navbar-menu::-webkit-scrollbar {
+        display: none; /* Hide scrollbar for Chrome, Safari and Opera */
       }
 }
 
 nav,
 .navbar-menu {
-  background-color: transparent !important;
-  background: rgba( 255, 255, 255, 0.1 );
-        box-shadow: 0 4px 32px 0 rgba( 31, 38, 135, 0.37 );
-        backdrop-filter: blur( 2px );
-        -webkit-backdrop-filter: blur( 2px );
+    background-color: transparent !important;
+    background: rgba( 255, 255, 255, 0.1 );
+    box-shadow: 0 4px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 2px );
+    -webkit-backdrop-filter: blur( 2px );
 }
 
 .navbar-item {
@@ -139,6 +145,29 @@ nav,
     }
 }
 
+@keyframes navAnimOpen {
+    0% {
+      display: none;
+      opacity: 0;
+      max-height: 0;
+    }
+    1% {
+      display: block;
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+      max-height: 396px;
+    }
+    from {
+      opacity: 0;
+      transform: translateY(-5px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0px);
+    }
+  }
 
 /*
     https://coolors.co/5865f2-5e68f2-646af2-6f6ef1-8677ef-b388eb-ea80fc
